tests/environment-values/multiple-ingress/base/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- deployment.yaml
- ingress-api.yaml
- ingress-web.yaml
